--- a/result-app/views/stylesheets/style.css
+++ b/result-app/views/stylesheets/style.css
@@ -87,12 +87,12 @@ body{
   text-transform: uppercase;
 }
 
-#choice .choice.dogs{
+#choice .choice.feature{
   color: #00cbca;
   float: right;
 }
 
-#choice .choice.cats{
+#choice .choice.bug{
   color: #2196f3;
   float: left;
 }
